# hva-tools

./: .coverage  .gitignore  README.md  brightspace.example.toml  pyproject.toml
.kiro/steering/: python-defaults.md  (+2 more)
.playwright-mcp/: page-2026-04-07T06-31-51-775Z.yml
brightspace/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  brightspace.example.toml  categories.toml  docker-compose.yml  pyproject.toml
brightspace/.kiro/specs/brightspace-feedback-extractor/: design.md  requirements.md
brightspace/.kiro/specs/browser-extension-api/: .config.kiro  tasks.md
brightspace/.kiro/specs/criteria-filtering-pdf-export/: .config.kiro  tasks.md
brightspace/.kiro/steering/: typescript-defaults.md
brightspace/brightspace_extractor/: __init__.py  aggregation.py  browser.py  cli.py  exceptions.py  extraction.py  filtering.py  models.py  navigation.py  parsing.py  pdf_export.py  serialization.py
brightspace/docs/: architecture.md  configuration.md  entity-relationship.md  future.md  output-format.md  security.md
brightspace/extension/: manifest.json  options.html  options.js
brightspace/scripts/: dump_quizzes.py
brightspace/tests/: assignments-debug.html  classlist-debug.html  conftest.py  quizzes-debug.html  test_adapter_fixtures.py  test_adapter_properties.py  test_aggregation.py  test_cli.py  test_discovery_models.py  test_docker.py  test_extension_properties.py  test_extract_classlist_fixture.py  test_extract_quizzes_fixture.py  test_filename.py  test_filtering.py  test_parsing.py  test_pdf_export.py  test_serialization.py  test_serialization_pandoc.py
brightspace_extractor/: adapter.py  api.py  browser.py  cli.py  exceptions.py  extension_helpers.py  extraction.py  models.py  navigation.py  parsing.py  pdf_export.py
config/: brightspace.example.toml
docs/: api.md  architecture.md  commands.md  configuration.md  entity-relationship.md  future.md
edutils/: README.md  config.py  edumundo_stats.py  main.py  pyproject.toml  scraping_utils.py  test_pattern_extractor.py
extension/: config.js  content.js  popup.html  popup.js
opm/: .gitignore  LICENSE  README.md  _quarto.yml  index.qmd  pyproject.toml  sprint2.qmd  styles.css  werkwijze.qmd
scripts/: check_quizzes.py  dump_classlist.py  dump_groups.py  dump_rubrics.py
tests/: expected_data.py  groups-debug.html  rubrics-debug.html  test_aggregation.py  test_api.py  test_cli.py  test_config.py  test_errors.py  test_extract_assignments_fixture.py  test_extract_classlist_fixture.py  test_extract_groups_fixture.py  test_extract_quizzes_fixture.py  test_extract_rubrics_fixture.py  test_output.py  test_parsing.py  test_pdf_export.py  test_serialization.py
(+21 files in other folders)
