[project]
name = "edumundo-stats"
version = "0.1.0"
description = "Automated extraction of module and class statistics from HVA EduMundo platform"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["edumundo", "statistics", "scraping", "education", "hva"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Topic :: Education",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "beautifulsoup4>=4.13.5",
    "playwright>=1.55.0",
    "requests>=2.32.5",
]

[project.scripts]
edumundo-stats = "edumundo_stats:main"

[project.urls]
Homepage = "https://github.com/yourusername/edumundo-stats"
Repository = "https://github.com/yourusername/edumundo-stats"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
